# valis-rs

./: Cargo.toml  Makefile  README.md
.chglog/: config.yml
src/: ledger.rs  lib.rs  main.rs  utils.rs
src/data/: context.rs  ledger.rs  mod.rs  model.rs  parser.rs  utils.rs
src/prompts/: mod.rs  user.rs
