[package]
name = "valis"
version = "0.1.0"
authors = ["Andrea Giacobino <no.andrea@gmail.com>"]
edition = "2018"
license = "MIT"
description = "VALIS for the command line"
repository = "https://github.com/noandrea/valis-rs"
homepage = "https://meetvalis.com"


[profile.release]
lto = true
opt-level = 's'

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
slug = "0.1.4"
lazy_static = "1.4.0"
regex = "1.4.3"
clap = "3.0.0-beta.2"
directories = "3.0.1"
dialoguer = "0.7.1"
blake3 = "0.3.7"
pad = "0.1.6"
simsearch = "0.2.2"
sled = "0.34.6"
uuid = { version = "0.8.2", features = ["v4", "serde"] }
serde = { version = "1.0.119", features = ["derive"] }
bincode = "1.3.1"
toml = "0.5.8"
rand = "0.8.2"
serde_json = "1.0.61"

[dev-dependencies]
wasm-bindgen-test = "0.3.19"
tempdir = "0.3.7"
